2007-10-08  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/AspNetAppProject.cs: Use xsp2 if using 2.0 runtime (regression 
	  introduced in previous commit).

2007-10-03  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/AspNetAppProject.cs: Launch xsp directly rather than via SH. Made
	  possible by changes to IExecutionHandler/ProcessService allowing setting
	  environment variables on new console processes. Fixes xsp shutdown (xsp
	  instances were not closes and were blocking ports). Hopefully fixes
	  #330327.
	
	  Also, don't force copy output refs.

2007-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* Deployment/WebDeployService.cs: Build before deploying.
	* Deployment/WebDeployTargetEditor.cs: Catch errors if file copy handler
	  can't be found.

2007-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/VerifyCodeBehindBuildStep.cs: Make errors in Codebehind generation
	  into warnings rather than preventing build.

2007-09-28  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/AspNetAppProject.cs: Check for xsp before running it.

2007-09-28  Michael Hutchinson <mhutchinson@novell.com> 

	* Deployment/WebTargetEditor.cs, Deployment/WebDeployService.cs,
	  Deployment/WebDeployCommands.cs, Deployment/WebDeployResolver.cs,
	  Deployment/WebDeployTargetCollection.cs, Deployment/WebDeployTarget.cs,
	  Deployment/WebDeployWindow.cs, Deployment/WebDeployLaunchDialog.cs,
	  Deployment/WebDeployOptionsPanel.cs,
	  Deployment/WebDeployTargetEditor.cs,
	  Deployment/WebDeployOptionsPanelWidget.cs, AspNetAddIn.addin.xml,
	  gtk-gui/MonoDevelop.AspNet.Deployment.WebDeployLaunchDialog.cs,
	  gtk-gui/MonoDevelop.AspNet.Deployment.WebDeployTargetEditor.cs,
	  gtk-gui/MonoDevelop.AspNet.Deployment.WebDeployOptionsPanelWidget.cs,
	  gtk-gui/MonoDevelop.AspNet.Deployment.WebTargetEditor.cs: Add new web
	  deployment UI and services.
	* Project/AspNetAppProject.cs: Add WebDeployTargets property. Use new web